overlaping fix

--- a/MyViz/css/style.css
+++ b/MyViz/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     background: #fefefe;
-    width: 1000px;
+    width: 1240px;
     margin: 0 auto;
 }
 
@@ -24,8 +24,8 @@ a:hover {
 
 #donut {
     position: absolute;
-    top: 200px;
-    height: 400px;
+    top: 220px;
+    height: 0px;
     width: 750px;
     left: 450px;
 }
@@ -338,7 +338,7 @@ a:hover {
     stroke-width: 1.5px;
     stroke-linejoin: round;
     stroke-linecap: round;
-    /* pointer-events: none; */
+    pointer-events: none;
     position: absolute;
     left: 0px;
 }
